# SA-MPPI

./: CMakeLists.txt  LICENSE  README .md  README.md  README_CN.md  dyna_移动.py  package.xml  readme  setup_sa_mppi_noetic.sh
config/: mppi_params.yaml  mppi_test.rviz
include/: mppi_controller.hpp
scripts/: mppi_path_publisher.py
src/: mppi_ros2_node.cpp
src/RC-ESDF/: main.cpp
src/mppi_laser_example/: CMakeLists.txt  package.xml
src/mppi_laser_example/config/: mppi_params.yaml  mppi_test.rviz
src/mppi_laser_example/include/: controller.hpp  motion_models.hpp  optimizer.hpp
src/mppi_laser_example/include/critics/: constraint_critic.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  esdf_critic.hpp  goal_angle_critic.hpp  goal_critic.hpp  obstacles_critic.hpp  path_align_critic.hpp  path_angle_critic.hpp  path_follow_critic.hpp  prefer_forward_critic.hpp  twirling_critic.hpp  velocity_deadband_critic.hpp
src/mppi_laser_example/include/models/: constraints.hpp  control_sequence.hpp  optimizer_settings.hpp  path.hpp  state.hpp  trajectories.hpp  types.hpp
src/mppi_laser_example/include/tools/: math_utils.hpp  noise_generator.hpp
src/mppi_laser_example/scripts/: JZJ_path.py  mppi_path_publisher.py  mppi_path_publisher_fz.py
src/mppi_laser_example/src/: mppi_ros1_node.cpp
src/poineer_ws/: readme
src/poineer_ws/src/pioneer_navigation/: CMakeLists.txt  package.xml
src/poineer_ws/src/pioneer_navigation/config/: navigation.rviz
src/poineer_ws/src/pioneer_navigation/launch/: emptyworld.launch  move_base.launch
src/poineer_ws/src/pioneer_navigation/navigation/: base_local_planner_ackermann_params.yaml  base_local_planner_default_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/poineer_ws/src/pioneer_utils/description/urdf/: pioneer3at.urdf.xacro  pioneer3at.urdf（复件）.xacro
src/poineer_ws/src/pioneer_utils/gazebo/: pioneer3at.gazebo  pioneer3at_ho.gazebo
src/poineer_ws/src/pioneer_utils/gazebo/launch/: bizhang.launch
