<?xml version="1.0"?>
<package format="2">
  <name>pioneer_navigation</name>
  <version>0.0.0</version>
  <description>Navigation stack for Pioneer robot in Gazebo simulation</description>

  <maintainer email="shaoyu@todo.todo">shaoyu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 运行时依赖：这些包必须存在才能正常使用 launch 文件 -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>pioneer_utils</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>move_base</exec_depend>
  <!-- 如果您的机器人模型需要其他包（如 pioneer_description），请添加 -->
</package>
